kube/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yml
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.prod.yml
        kompose.version: 1.24.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: server
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: mongodb://server:test@mongo:27017/baby-tracker
          image: gcr.io/bgf-infra/baby-tracker:latest
          imagePullPolicy: Always
          name: server
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
